--- a/front-end/views/splash.pug
+++ b/front-end/views/splash.pug
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
-    body
-        h1 Welcome to SUNSET framework III
+extends ./layout/app.pug
+
+block content
+    h1 Hello from OjvarLand - V3
+
+block styles
+    script(defer src=mix("/js/pages/home/index.js"))
