Fix bug in bootloader module

--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -19,6 +19,5 @@ html(lang='en')
                 block content
 
         footer.footer
-            .content.has-text-centered
-                p
-                    strong Ojvar net
+            .content.has-text-left
+                p Ojvar world
