--- a/front-end/views/home.pug
+++ b/front-end/views/home.pug
@@ -1,4 +1,13 @@
 extends ./layout/app.pug
 
 block content
-    h1 Hello from OjvarLand
+    .has-text-centered
+        figure
+            img.logo
+        h1 Welcome to Ojvar World
+
+block styles
+    link(rel='stylesheet' href=mix('/css/pages/home.index.css'))
+
+block scripts
+    script(defer src=mix("/js/pages/home/index.js"))
