--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -10,10 +10,45 @@ html(lang='en')
         link(rel='stylesheet' href=mix('/css/core/app.css'))
         block styles
 
-        src(defer src=mix('/js/core/app.js'))
+        script(defer src=mix('/js/core/app.js'))
         block scripts
 
     body
+        nav.navbar(role='navigation' aria-label='main navigation')
+            .navbar-brand
+                a.navbar-item(href=global.serverUrl)
+                    img.nav-bar-logo
+                a.navbar-burger.burger(role='button' aria-label='menu' aria-expanded='false' data-target='navbarBasicExample')
+                    span(aria-hidden='true')
+                    span(aria-hidden='true')
+                    span(aria-hidden='true')
+            #navbarBasicExample.navbar-menu
+                .navbar-start
+                    a.navbar-item
+                        | Home
+                    a.navbar-item
+                        | Documentation
+                    .navbar-item.has-dropdown.is-hoverable
+                        a.navbar-link
+                            | More
+                        .navbar-dropdown
+                            a.navbar-item
+                                | About
+                            hr.navbar-divider
+                            a.navbar-item
+                                | Report an issue
+                .navbar-end
+                    .navbar-item
+                        .buttons
+                            if (can('auth', req))
+                                a.button.is-light
+                                    | Log out
+                            else
+                                a.button.is-primary
+                                    strong Sign up
+                                a.button.is-light
+                                    | Log in
+
         section.section#app
             .contaier
                 block content
