Update app.pug page

--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -25,7 +25,7 @@ html(lang='en')
                     span(aria-hidden='true')
             #navbarBasicExample.navbar-menu
                 .navbar-start
-                    a.navbar-item
+                    a.navbar-item(href=Router.routePath('home.index'))
                         | Home
                     .navbar-item.has-dropdown.is-hoverable
                         a.navbar-link
