Update app.pug page

--- a/front-end/views/home.pug
+++ b/front-end/views/home.pug
@@ -1,9 +1,10 @@
 extends ./layout/app.pug
 
 block content
-    .has-text-centered
+    h1.title
         figure
-            img.logo
+            img.nav-bar-logo(src='images/logo.png' alt='Logo')
+    h2.subtitle
         h1.title.is-1 Hello #{ req.params.name || 'John Doe' }
         h2.subtitle.is-2 Welcome to Ojvar World
 
