--- a/front-end/sass/core/layout-app.scss
+++ b/front-end/sass/core/layout-app.scss
@@ -7,3 +7,892 @@ img.nav-bar-logo {
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+// Variables
+.footer {
+    padding: 0px;
+}
+
+.p-1 {
+    padding: 0.25rem;
+}
+
+.p-3 {
+    padding: 1rem;
+}
+
+.mt-0 {
+    margin-top: 0rem;
+}
+
+.mt-1 {
+    margin-top: 0.25rem;
+}
+
+.mt-2 {
+    margin-top: 0.5rem;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
+
+.mt-4 {
+    margin-top: 1.5rem;
+}
+
+.mt-5 {
+    margin-top: 3rem;
+}
+
+.mr-0 {
+    margin-right: 0rem;
+}
+
+.mr-1 {
+    margin-right: 0.25rem;
+}
+
+.mr-2 {
+    margin-right: 0.5rem;
+}
+
+.mr-3 {
+    margin-right: 1rem;
+}
+
+.mr-4 {
+    margin-right: 1.5rem;
+}
+
+.mr-5 {
+    margin-right: 3rem;
+}
+
+.py-0 {
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+}
+
+.py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+
+.py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.py-3 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.py-4 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.py-5 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+// Bootstrap
+// $fa-font-path: "~@fortawesome/fontawesome-free/fonts";
+@import "~font-awesome/scss/font-awesome.scss";
+
+@font-face {
+    font-family: IRANSans;
+    font-style: normal;
+    font-weight: normal;
+    src: url('~@FONTS/IRANSansWeb_Medium.woff2') format('woff2'),
+        url('~@FONTS/IRANSans-Bold-web.woff') format('woff');
+}
+
+/*======================= bulma RTL*/
+.field.is-grouped>.control:not(:last-child) {
+    margin-left: 0.75rem;
+    margin-right: 0px;
+}
+
+.container-child {
+    padding-top: 5rem;
+}
+
+table th {
+    text-align: center !important;
+}
+
+table td {
+    text-align: right !important;
+}
+
+table.text-center td {
+    text-align: center !important;
+}
+
+.button .icon:first-child:not(:last-child) {
+    margin-left: 0.25em;
+    margin-right: calc(-0.5em - 1px);
+}
+
+/*.button .icon:last-child:not(:first-child) {
+    margin-left: 0.25em;
+    margin-right: 0.25em;
+}*/
+
+.control {
+    text-align: right;
+}
+
+input {
+    max-width: 100%;
+}
+
+.fieldset {
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .02);
+    color: #4a4a4a;
+    display: block;
+    padding: 1.25rem;
+    border: 1px solid #ccc
+}
+
+.fieldset>legend {
+    color: #363636;
+    display: block;
+    font-size: 1rem;
+    font-weight: 700;
+    background-color: #fff;
+    padding: 0 5px;
+    width: max-content;
+    border: 0 none
+}
+
+/*======================= bulma RTL*/
+
+main {
+    margin-top: 144px;
+}
+
+body {
+    text-align: unset;
+    font-family: IRANSans;
+    direction: rtl;
+    margin: 0;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #212529;
+    background-color: #f8fafc;
+    overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #3E4D61;
+}
+
+.text-center {
+    text-align: center;
+}
+
+w-100 {
+    width: 100%;
+}
+
+.is-justified-between {
+    justify-content: space-between;
+}
+
+.disabled-opt {
+    color: #dcdcdc;
+}
+
+.navbar-expand-md .navbar-collapse {
+    display: flex !important;
+    flex-basis: auto;
+}
+
+.navbar-expand-md .navbar-toggler {
+    display: none;
+}
+
+.navbar-collapse {
+    flex-grow: 1;
+    align-items: center;
+}
+
+.navbar-expand-md {
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+}
+
+.navbar-nav {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+.navbar-expand-md .navbar-nav {
+    flex-direction: row;
+}
+
+.navbar-expand-md .navbar-nav .nav-link {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+}
+
+#navbarSupportedContent .button {
+    border: none;
+}
+
+.function-links a {
+    font-size: 14px;
+}
+
+
+/*=============menu*/
+.navbar {
+    position: absolute;
+    background: none;
+}
+
+.navbar>.container,
+.navbar>.container-fluid {
+    justify-content: unset;
+    display: block;
+}
+
+nav {
+    background: none;
+    color: #1d1f20;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+    padding: 22px 0px !important;
+}
+
+.navbar-brand img {
+    width: 100px;
+    height: auto;
+}
+
+.navbar-brand {
+    padding: 0px;
+    float: left;
+}
+
+.nav-user-container {
+    background: #fff;
+    border-radius: 50px;
+    height: 50px;
+    float: right;
+    margin-right: 85px;
+    min-width: 240px;
+    padding-left: 10px;
+}
+
+.nav-user-container a {
+    color: #40476D;
+}
+
+.nav-user-container-icon {
+    background: #08C2C0;
+    border-radius: 50%;
+    width: 46px;
+    margin: 2px;
+    height: 46px;
+    box-shadow: -4px 3px 17px #7B7F8229;
+}
+
+.nav-user-container ul {
+    padding: 0px;
+}
+
+.nav-user-container-icon img {
+    width: 24px;
+}
+
+.container.page-header {
+    margin: -20px auto 30px auto;
+    padding: 5px 0px 5px 0px;
+    border-bottom: 1px solid #7B7F8229;
+    width: 100%;
+}
+
+.container.main-content {
+    width: 100%;
+}
+
+/*** INPUT ***/
+nav input {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+/*** LABEL ***/
+nav label {
+    cursor: pointer;
+    display: block;
+    padding: 24px;
+    background: #40476D;
+    border-radius: 50%;
+    z-index: 3;
+    position: absolute;
+    top: 0px;
+}
+
+/* Hamburger Icon */
+#menu-icon,
+#menu-icon:before,
+#menu-icon:after {
+    background: #fff;
+    border-radius: 0.05em;
+    height: 2px;
+    transition: all 0.2s ease-in-out;
+    width: 30px;
+}
+
+#menu-icon {
+    display: inline-block;
+    margin: 0px -10px;
+    max-width: 24px;
+    position: absolute;
+    width: 55px;
+    z-index: 2;
+}
+
+nav label #menu-icon {
+    float: right;
+}
+
+#menu-icon:before,
+#menu-icon:after {
+    content: '';
+    left: 0;
+    position: absolute;
+}
+
+#menu-icon:before {
+    top: -7px;
+}
+
+#menu-icon:after {
+    bottom: -7px;
+}
+
+/* Close Icon */
+nav input[type=checkbox]:checked+label #menu-icon {
+    background: transparent;
+}
+
+nav input[type=checkbox]:checked+label #menu-icon:before {
+    top: 0;
+    transform: rotate(-45deg);
+}
+
+nav input[type=checkbox]:checked+label #menu-icon:after {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+
+
+/*** MENU ***/
+/* Overlay */
+nav input:checked~#overlay {
+    background: url('/images/overlay-bg.jpg');
+    background-size: 80vw;
+    bottom: 0;
+    left: 0;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
+}
+
+nav .menu-links {
+    display: none;
+    overflow: hidden;
+    padding: 10vh 0px 10px 0px;
+    text-align: center;
+    z-index: 2;
+    width: 30vw;
+}
+
+.menu-background {
+    display: none;
+    width: 30vw;
+    height: 100vh;
+    position: relative;
+    top: 0px;
+    right: 0px;
+    z-index: 2;
+}
+
+nav input:checked~#overlay .menu-background {
+    display: block;
+}
+
+.menu-background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+
+nav input:checked~#overlay .menu-links {
+    display: block;
+}
+
+.menu-links a {
+    color: #1d1f20 !important;
+    text-decoration: none;
+    display: block;
+    padding: 12px;
+    font-size: 16px;
+}
+
+.menu-links a:hover {
+    text-decoration: underline;
+}
+
+#dropdown-toggler.show #dropdown-menu {
+    display: block;
+}
+
+.navbarSupportedContent .button {
+    border: none;
+}
+
+/*=============menu*/
+
+/*===============front page top*/
+.front-page-bg img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.front-page-img {
+    width: 54%;
+    position: relative;
+    top: -35px;
+    margin-top: -110px;
+}
+
+.front-page-img img {
+    width: 100%;
+    height: 650px;
+    object-fit: cover;
+}
+
+.sitename {
+    float: left;
+    z-index: 0;
+    position: absolute;
+    width: 46%;
+    text-align: center;
+    margin-top: 50px;
+    top: 10%;
+    left: 0%;
+}
+
+.sitename h1 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.sitename h2 {
+    font-size: 30px;
+}
+
+/*===============front page top*/
+/*===============front page link box*/
+
+.front-page-link-box {
+    background: #fff;
+    margin: unset;
+    padding: 15px 20px;
+    overflow: hidden;
+    position: absolute;
+    box-shadow: 0px 8px 14px #3E4D6124;
+    left: 40px;
+    top: 250px;
+    width: 40%;
+}
+
+.blue-luzy {
+    background: linear-gradient(0deg, rgb(79, 225, 255) 0%, rgb(11, 195, 232) 30%, rgb(11, 105, 144) 100%);
+    box-shadow: 0px 12px 16px #22A6D829;
+}
+
+.orange-luzy {
+    background: linear-gradient(0deg, #FF9E8E 0%, #FFB15A 30%, #FFBD38 100%);
+    box-shadow: 0px 12px 16px #DF6F0F29;
+}
+
+.blueg-luzy {
+    background: linear-gradient(0deg, #4BCDDB 0%, #29C5BD 30%, #05BC9E 100%);
+    box-shadow: 0px 12px 16px #018F772E;
+}
+
+.green-luzy {
+    background: linear-gradient(0deg, #62CC69 0%, #36D4BD 30%, #14E08E 100%);
+    box-shadow: 0px 12px 16px #018F772E;
+}
+
+.oranger-luzy {
+    background: linear-gradient(0deg, #FF9992 0%, #FFA37B 30%, #FFB554 100%);
+    box-shadow: 0px 12px 16px #018F772E;
+}
+
+.purple-luzy {
+    background: linear-gradient(0deg, #98A8DB 0%, #98A8DB 30%, #73C6EA 100%);
+    box-shadow: 0px 12px 16px #018F772E;
+}
+
+.icon-container a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.icon-container-text a {
+    color: #3E4D61;
+}
+
+.icon-container {
+    border-radius: 23px;
+    transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
+    width: 77px;
+    height: 77px;
+    position: relative;
+    margin: auto;
+}
+
+.icon-container img {
+    width: 55px;
+    height: auto;
+    transform: rotate(-45deg);
+}
+
+
+.oranger-luzy img,
+.purple-luzy img {
+    width: 47px;
+}
+
+.blueg-luzy img {
+    width: 68px;
+    height: 68px;
+    margin-right: 0px;
+    margin-top: 4px;
+}
+
+.green-luzy img {
+    width: 40px;
+    height: 44px;
+    margin-right: 1px;
+    margin-top: 10px;
+    width: 44px !important;
+}
+
+/*===============front page link box*/
+
+/*===============footer*/
+
+footer.footer {
+    background: url('/images/background.png');
+    background-size: cover;
+}
+
+.footer-links {
+    width: 100%;
+    margin: 0px;
+    flex-wrap: wrap;
+}
+
+.footer-links a {
+    display: block;
+    color: #25306F;
+    margin-left: 5px;
+}
+
+.footer-links a:last-child {
+    margin-left: 0px;
+}
+
+.footer-logo {
+    text-align: center;
+}
+
+.footer-logo img {
+    width: 110px;
+}
+
+.copyright {
+    border-top: 1px solid #dee2e6 !important;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.footer {
+    margin-top: 3rem;
+    padding: 3rem 0px 0px 0px;
+
+}
+
+/*===============footer*/
+
+/*=====================asnad rahbordi age*/
+h2.item-category {
+    font-size: 20px;
+    border-bottom: 3px solid #09BDBD;
+    width: 500px;
+    margin: auto;
+}
+
+.itemsbox {
+    background: #fff;
+    box-shadow: 0px 2px 18px #0000001A;
+    color: #3E4D61;
+}
+
+.linkicon {
+    background: '~IMAGES/icons/left-arrow.svg';
+    width: 32px;
+    height: 32px;
+    background-size: cover;
+}
+
+.itembox {
+    border-bottom: 1px solid #CFCECE;
+}
+
+.itembox:last-child {
+    border-bottom: none;
+}
+
+.itembox a {
+    color: #3E4D61;
+}
+
+/*=====================asnad rahbordi age*/
+
+/*=====================multi text form*/
+.form-itemsbox {
+    background: #fff;
+    box-shadow: 0px 2px 18px #0000001A;
+    color: #3E4D61;
+    margin-bottom: 10px;
+    padding: 10px 15px;
+    min-height: 85px;
+}
+
+.form-itemsbox .columns {
+    align-items: end;
+}
+
+/*=====================multi text form*/
+
+/*=========================hamahangi daroon bakhshi*/
+.intro-card {
+    min-height: 185px;
+    background: #fff;
+    border-top: 3px solid #08c2c0;
+    box-shadow: 0px 5px 14px #c7c7c7;
+}
+
+.intro-card-head h2 {
+    font-size: 18px;
+    padding: 5px;
+    text-align: center;
+    background: #ddf0f8;
+}
+
+.intro-card a {
+    color: #3E4D61;
+}
+
+.intro-cards {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.front-page-link-box-small {
+    width: 35%;
+    position: absolute;
+    top: 440px;
+    display: flex;
+    left: 75px;
+}
+
+.front-page-link-box-small a {
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.front-page-link-box-small img {
+    width: 40px;
+}
+
+.front-page-link-box-small .icon-container {
+    width: 65px;
+    height: 65px;
+}
+
+
+.inline-card {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.inline-card-head {
+    border-radius: 15px;
+    box-shadow: 0px 5px 14px #c7c7c7;
+    padding: 30px 20px;
+    width: 340px;
+    height: 150px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    background: #00c4a7;
+}
+
+.inline-card-head h2 {
+    color: #fff;
+}
+
+.inline-card-body {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    justify-content: space-evenly;
+    margin-right: -15px;
+}
+
+.inline-card-body-item a {
+    border-radius: 3px;
+    border: 1px dashed #c7c7c7;
+    padding: 10px 5px;
+    background: #ddf0f8;
+    display: block;
+    text-align: center;
+    width: 270px;
+}
+
+
+/*=========================hamahangi daroon bakhshi*/
+
+/**
+* forms
+**/
+.form-small {
+    max-width: 100%;
+    background: #fff;
+    border-radius: 7px;
+    box-shadow: 0px 5px 7px #3E4D6124;
+    padding: 20px 15px;
+}
+
+
+/**
+* card info
+**/
+.info-card {
+    background: #fff;
+    box-shadow: 0px 5px 7px #3E4D6124;
+    padding: 15px;
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.info-card-title {
+    font-size: 20px;
+}
+
+.info-card-details {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.info-card-label {
+    font-size: 12px;
+    color: #999;
+}
+
+.info-card-box {
+    background: #fff;
+    box-shadow: 0px 5px 7px #3E4D6124;
+    border-top: 4px solid #09BDBD;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.page-data-container {
+    background: #fff;
+    box-shadow: 0px 5px 7px #3E4D6124;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 35px;
+}
+
+/**
+* checkboxes
+*/
+.multi-checkboxes {
+    display: flex;
+    flex-wrap: wrap;
+    height: 250px;
+    overflow-y: scroll;
+}
+
+/**
+* Session
+**/
+.print-form-logo {
+    width: 95px;
+    height: auto;
+}
+
+.print-form-body {
+    margin-top: 10px;
+}
+
+/**
+* modal
+**/
+.departments-modal .modal-content {
+    background: #fff;
+    border-radius: 10px;
+    padding: 15px;
+}
+
+.departments-modal .modal-content .childrens a {
+    margin: auto;
+}
