Update css codes

--- a/front-end/views/home.pug
+++ b/front-end/views/home.pug
@@ -3,7 +3,7 @@ extends ./layout/app.pug
 block content
     h1.title
         figure
-            img.nav-bar-logo(src='images/logo.png' alt='Logo')
+            img.logo(src='images/logo.png' alt='Logo')
     h2.subtitle
         h1.title.is-1 Hello #{ req.params.name || 'John Doe' }
         h2.subtitle.is-2 Welcome to Ojvar World
