Update router and routing system

--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -27,9 +27,9 @@ body
                             span
                     #navbarMenuHero1.navbar-menu
                         .navbar-end
-                            a.navbar-item.is-active
+                            a.navbar-item.is-active(href=Router.routePath('home.index'))
                                 | Home
-                            a.navbar-item
+                            a.navbar-item(href="#")
                                 | About
                             //- .navbar-item.has-dropdown.is-hoverable
                                 .navbar-link
