--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -20,7 +20,7 @@ body
                 .container
                     .navbar-brand
                         a.navbar-item
-                            img(src='images/logo.png' alt='Logo')
+                            img(src='/images/logo.png' alt='Logo')
                         span.navbar-burger.burger(data-target='navbarMenuHero1')
                             span
                             span
@@ -46,7 +46,7 @@ body
 
         .hero.is-fullheight-with-navbar
             .hero-body
-                .container.has-text-centered
+                .container
                     block content
             .hero-foot
                 nav.tabs
