complete date time format

--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -12,6 +12,8 @@ html
         block styles
 
         script(defer src=mix('/js/core/app.js'))
+        script(defer, src=mix('js/global/app.js'))
+
         block scripts
 body
     section#app
