add gant cgart with fake date

--- a/front-end/views/layout/app.pug
+++ b/front-end/views/layout/app.pug
@@ -31,8 +31,8 @@ body
                         .navbar-end
                             a.navbar-item.is-active(href=Router.routePath('home.index'))
                                 | Home
-                            a.navbar-item(href="#")
-                                | About
+                            a.navbar-item(href="/project")
+                                | Project Manager
                             //- .navbar-item.has-dropdown.is-hoverable
                                 .navbar-link
                                     | More
